--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,95 +7,99 @@ output:
 
 
 ## Loading and preprocessing the data
+
+The code responsible of reading the data and performing the preprocessing is:
+
 ```{r echo=TRUE}
 activities <- read.csv("activity.csv")
 activities$date = as.Date(activities$date, "%Y-%m-%d")
 ```
 
 ## What is mean total number of steps taken per day?
+From the provided data, the steps are aggregated per day, and the histogram shows the frequency of the steps taken per day.
+
 ```{r echo=TRUE}
 stepsPerDay<-aggregate(steps~date,data=activities,sum)
 hist(stepsPerDay$steps, col = "blue", xlab = "Total Steps per Day", ylab = "Frequency", 
      main = "Histogram - Total steps taken per day",breaks=10)
 ```
 
+The mean and median of the steps taken per day are calculated:
+
 ```{r echo=TRUE}
 meanSteps<-mean(stepsPerDay$steps)
 medianSteps<-median(stepsPerDay$steps)
 ```
 
+The resulting mean is `r as.integer(meanSteps)` steps and the median is `r medianSteps` steps.
+
 ## What is the average daily activity pattern?
 
-1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+First, the data are aggregated per intervals, computing the mean for each interval.
 ```{r echo=TRUE}
 stepsPerInterval<-aggregate(steps~interval,data=activities,mean)
+```
 
+Then, a time series plot is made for show the pattern of the average daily activity pattern
+```{r echo=TRUE}
 library(ggplot2)
 library(scales)
 ggplot(stepsPerInterval, aes(interval,steps)) + geom_line() 
 ```
 
-2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
 ```{r echo=TRUE}
 maxInterval <- with(stepsPerInterval, {
   interval[which.max(steps)]
 })
 ```
-
+Also, the 5-minute interval containing the maximum number of steps has been calculated, resulting on being the interval `r maxInterval`
 
 ## Imputing missing values
 
-Note that there are a number of days/intervals where there are missing values
-(coded as NA). The presence of missing days may introduce bias into some calculations 
-or summaries of the data.
+Note that there are a number of days/intervals where there are missing values (coded as NA). 
 
-1. Calculate and report the total number of missing values in the dataset 
-   (i.e. the total number of rows with NAs)
+```{r}
+summary(activities)
+```
+
 ```{r echo=TRUE}
 numberOfMissing<-sum(is.na(activities$steps))
 ```
 
-2. Devise a strategy for filling in all of the missing values in the dataset. 
-   The strategy does not need to be sophisticated. For example, you could use the 
-   mean/median for that day, or the mean for that 5-minute interval, etc.
+For the given data, the number of missing values is `r numberOfMissing`
+
+In order to avoid introducing bias into some calculations or summaries of the data a strategy for filling in all of the missing values in the dataset has been designed. The proposed strategy is to use the mean for the 5-minute interval having a missing value.
+
 ```{r echo=TRUE}
 completedActivities <- activities
-completedActivities[is.na(completedActivities$steps), 'steps'] <- apply(completedActivities[is.na(completedActivities$steps), ], 
-                                                                        1, function(x, stepsPerInterval) {
-                                                                          interval <- as.integer(x[3])
-                                                                          x[1] <- stepsPerInterval[stepsPerInterval$interval == interval, 'steps']
-                                                                        }, stepsPerInterval)
-
+completedActivities[is.na(completedActivities$steps), 'steps'] <- 
+  apply(completedActivities[is.na(completedActivities$steps), ], 1, 
+        function(x, stepsPerInterval) {
+          interval <- as.integer(x[3])
+          x[1] <- stepsPerInterval[stepsPerInterval$interval == interval, 'steps']
+         }, stepsPerInterval)
 ```
 
-3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
-
-4. Make a histogram of the total number of steps taken each day and Calculate and report 
-   the mean and median total number of steps taken per day. Do these values differ from the 
-   estimates from the first part of the assignment? What is the impact of imputing missing data 
-   on the estimates of the total daily number of steps?
+A new histogram is made in order to identify any significative change.
 ```{r echo=TRUE}
 stepsPerDayCompleted<-aggregate(steps~date,data=completedActivities,sum)
 hist(stepsPerDayCompleted$steps, col = "blue", xlab = "Total Steps per Day", ylab = "Frequency", 
      main = "Histogram - Total steps taken per day",breaks=10)
 ```
 
-Calculate and report the mean and median of the total number of steps taken per day
+Also, the mean and median of the total number of steps taken per day are calculated.
 ```{r echo=TRUE}
 meanStepsCompleted<-mean(stepsPerDayCompleted$steps)
 medianStepsCompleted<-median(stepsPerDayCompleted$steps)
 ```
 
-Are there differences in activity patterns between weekdays and weekends?
-For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
-
-
-
+As a result of using the mean of the intervals, there are no significative changes. The mean is equal to the dataset with missing values (`r meanStepsCompleted`) and the difference in the median is no significative (`r medianSteps` with missing values versus `r medianStepsCompleted` with the imputed missed values).
 
 ## Are there differences in activity patterns between weekdays and weekends?
-1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” 
-    indicating whether a given date is a weekday or weekend day.
+
+In order to answer this question a new factor variable is created in the dataset with two levels – “weekday” and “weekend”, indicating whether a given date is a weekday or weekend day.
+
 ```{r echo=TRUE} 
 completedActivitiesWday<-completedActivities
 completedActivitiesWday$wday <- as.POSIXlt(completedActivities$date)$wday
@@ -108,12 +112,12 @@ completedActivitiesWday$wday <- apply(completedActivitiesWday, 1, function(x) {
 })
 ```
 
-2. Make a panel plot containing a time seri<es plot (i.e. type = "l") of the 5-minute interval
-    (x-axis) and the average number of steps taken, averaged across all weekday days or weekend 
-    days (y-axis). See the README file in the GitHub repository to see an example of what this plot 
-    should look like using simulated data.
+A panel containing two time series plots of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis) is shown.
+
 ```{r echo=TRUE}   
 stepsPerIntervalWday<-aggregate(steps~interval+wday,data=completedActivitiesWday,mean)
 
 ggplot(stepsPerIntervalWday, aes(interval,steps)) + geom_line() +facet_grid(wday ~ .)
 ```
+
+Some significative differences can be observed. On weekend the activity starts almost two hours later, and while during the weekdays the greater number of steps can be found on the beginning and the end of the workday, on the weekend there is a significant activity (over 100 steps)  throughout the day, but with a lower peak than on weekday.
